# mcp-email-summarizer

./: .gitignore  README.md  main.py  mcp_email_server.py  pyproject.toml
